Ammo panel: allow displaying fuel always even if empty if onlycurrent mode is on (disabled by default)

--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -72,6 +72,7 @@ seta hud_panel_weapons_selection_speed "" "weapon selection speed; \"0\" = insta
 seta hud_panel_ammo_pos "" "position of this panel"
 seta hud_panel_ammo_size "" "size of this panel"
 seta hud_panel_ammo_onlycurrent "" "\"1\" = show only current ammo type"
+seta hud_panel_ammo_onlycurrent_and_always_fuel "" "always show fuel even if empty"
 seta hud_panel_ammo_noncurrent_alpha "" "alpha of noncurrent ammo types"
 seta hud_panel_ammo_noncurrent_scale "" "scale of noncurrent ammo types, relative to the current ammo type"
 seta hud_panel_ammo_iconalign "" "\"0\" = align icons to the left, \"1\" = align icons to the right"
