--- a/hud_luma.cfg
+++ b/hud_luma.cfg
@@ -79,6 +79,7 @@ seta hud_panel_ammo_bg_alpha ""
 seta hud_panel_ammo_bg_border ""
 seta hud_panel_ammo_bg_padding "4"
 seta hud_panel_ammo_onlycurrent "0"
+seta hud_panel_ammo_onlycurrent_and_always_fuel "0"
 seta hud_panel_ammo_noncurrent_alpha "0.6"
 seta hud_panel_ammo_noncurrent_scale "0.4"
 seta hud_panel_ammo_iconalign "0"
