Improve cl_simpleitems_postfix description; indent itemstime.qc by tabs plus minor code cleanups

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -946,7 +946,7 @@ seta cl_items_vehicle_color "2 0.5 0.5" "color of items seen from inside a vehic
 seta cl_ghost_items 0.45 "enable ghosted items (when between 0 and 1, overrides the alpha value)"
 seta cl_ghost_items_color "-1 -1 -1" "color of ghosted items (FORMAT: \"0 0 0\" leaves the color unchanged, negative values allowed)"
 seta cl_simple_items 0 "enable simple items (if server allows)"
-set cl_simpleitems_postfix "_luma" "posfix to add fo model name when simple items are enabled"
+set cl_simpleitems_postfix "_luma" "load simple items models with this postfix (<model_name><postfix>.<extension>). _luma and _simple are available by default"
 set cl_weapon_stay_color "2 0.5 0.5" "color of picked up weapons when g_weapon_stay > 0 (FORMAT: \"0 0 0\" leaves the color unchanged, negative values allowed)"
 set cl_weapon_stay_alpha 0.75 "alpha of picked up weapons when g_weapon_stay > 0"
 
