Make weapon item pickup ammo configurable per-weapon
Implements #3000

Thanks k9 and terencehill for https://gitlab.com/xonotic/xonotic-data.pk3dir/-/merge_requests/1485

--- a/bal-wep-xonotic.cfg
+++ b/bal-wep-xonotic.cfg
@@ -43,6 +43,7 @@ set g_balance_blaster_weaponstartoverride -1
 set g_balance_blaster_weaponthrowable 0
 // }}}
 // {{{ #2: Shotgun
+set g_balance_shotgun_pickup_ammo 15
 set g_balance_shotgun_primary_ammo 1
 set g_balance_shotgun_primary_animtime 0.2
 set g_balance_shotgun_primary_bullets 12
@@ -102,6 +103,7 @@ set g_balance_machinegun_first_force 3
 set g_balance_machinegun_first_refire 0.125
 set g_balance_machinegun_first_spread 0.03
 set g_balance_machinegun_mode 1
+set g_balance_machinegun_pickup_ammo 80
 set g_balance_machinegun_reload_ammo 0
 set g_balance_machinegun_reload_time 2
 set g_balance_machinegun_solidpenetration 13.1
@@ -126,6 +128,7 @@ set g_balance_machinegun_weaponthrowable 1
 // {{{ #4: Mortar
 set g_balance_mortar_bouncefactor 0.5
 set g_balance_mortar_bouncestop 0.075
+set g_balance_mortar_pickup_ammo 40
 set g_balance_mortar_primary_ammo 2
 set g_balance_mortar_primary_animtime 0.3
 set g_balance_mortar_primary_damage 55
@@ -182,6 +185,7 @@ set g_balance_minelayer_health 15
 set g_balance_minelayer_lifetime 10
 set g_balance_minelayer_lifetime_countdown 0.5
 set g_balance_minelayer_limit 3
+set g_balance_minelayer_pickup_ammo 40
 set g_balance_minelayer_protection 0
 set g_balance_minelayer_proximityradius 150
 set g_balance_minelayer_radius 175
@@ -211,6 +215,7 @@ set g_balance_electro_combo_force 120
 set g_balance_electro_combo_radius 150
 set g_balance_electro_combo_safeammocheck 1
 set g_balance_electro_combo_speed 2000
+set g_balance_electro_pickup_ammo 30
 set g_balance_electro_primary_ammo 4
 set g_balance_electro_primary_animtime 0.3
 set g_balance_electro_primary_comboradius 300
@@ -262,6 +267,7 @@ set g_balance_electro_weaponstartoverride -1
 set g_balance_electro_weaponthrowable 1
 // }}}
 // {{{ #7: Crylink
+set g_balance_crylink_pickup_ammo 30
 set g_balance_crylink_primary_ammo 3
 set g_balance_crylink_primary_animtime 0.3
 set g_balance_crylink_primary_bouncedamagefactor 1
@@ -335,6 +341,7 @@ set g_balance_vortex_charge_rot_rate 0
 set g_balance_vortex_charge_shot_multiplier 0
 set g_balance_vortex_charge_start 0.5
 set g_balance_vortex_charge_velocity_rate 0
+set g_balance_vortex_pickup_ammo 30
 set g_balance_vortex_primary_ammo 6
 set g_balance_vortex_primary_animtime 0.4
 set g_balance_vortex_primary_armorpierce 0
@@ -369,6 +376,7 @@ set g_balance_vortex_weaponstartoverride -1
 set g_balance_vortex_weaponthrowable 1
 // }}}
 // {{{ #9: Hagar
+set g_balance_hagar_pickup_ammo 40
 set g_balance_hagar_primary_ammo 1
 set g_balance_hagar_primary_damage 25
 set g_balance_hagar_primary_damageforcescale 0
@@ -428,6 +436,7 @@ set g_balance_devastator_guideratedelay 0.01
 set g_balance_devastator_guidestop 0
 set g_balance_devastator_health 30
 set g_balance_devastator_lifetime 10
+set g_balance_devastator_pickup_ammo 40
 set g_balance_devastator_radius 110
 set g_balance_devastator_refire 1.1
 set g_balance_devastator_reload_ammo 0
@@ -471,6 +480,7 @@ set g_balance_porto_weaponstartoverride -1
 set g_balance_porto_weaponthrowable 1
 // }}}
 // {{{ #12: Vaporizer
+set g_balance_vaporizer_pickup_ammo 30
 set g_balance_vaporizer_primary_ammo 10
 set g_balance_vaporizer_primary_animtime 0.3
 set g_balance_vaporizer_primary_damage 150
@@ -490,6 +500,7 @@ set g_balance_vaporizer_weaponstartoverride -1
 set g_balance_vaporizer_weaponthrowable 1
 // }}}
 // {{{ #13: Grappling Hook
+set g_balance_hook_pickup_ammo 50
 set g_balance_hook_primary_ammo 5
 set g_balance_hook_primary_animtime 0.3
 set g_balance_hook_primary_hooked_ammo 5
@@ -517,6 +528,7 @@ set g_balance_hook_weaponstartoverride -1
 set g_balance_hook_weaponthrowable 1
 // }}}
 // {{{ #14: Heavy Laser Assault Cannon (MUTATOR WEAPON)
+set g_balance_hlac_pickup_ammo 30
 set g_balance_hlac_primary_ammo 1
 set g_balance_hlac_primary_animtime 0.4
 set g_balance_hlac_primary_damage 18
@@ -569,6 +581,7 @@ set g_balance_tuba_weaponthrowable 1
 // }}}
 // {{{ #16: Rifle (MUTATOR WEAPON)
 set g_balance_rifle_bursttime 0
+set g_balance_rifle_pickup_ammo 80
 set g_balance_rifle_primary_ammo 10
 set g_balance_rifle_primary_animtime 0.4
 set g_balance_rifle_primary_bullethail 0
@@ -694,6 +707,7 @@ set g_balance_seeker_missile_speed_up 300
 set g_balance_seeker_missile_speed_z 0
 set g_balance_seeker_missile_spread 0
 set g_balance_seeker_missile_turnrate 0.65
+set g_balance_seeker_pickup_ammo 40
 set g_balance_seeker_reload_ammo 0
 set g_balance_seeker_reload_time 2
 set g_balance_seeker_switchdelay_drop 0.2
@@ -762,6 +776,7 @@ set g_balance_arc_cooldown 2.5
 set g_balance_arc_cooldown_release 0
 set g_balance_arc_overheat_max 5
 set g_balance_arc_overheat_min 3
+set g_balance_arc_pickup_ammo 30
 set g_balance_arc_switchdelay_drop 0.2
 set g_balance_arc_switchdelay_raise 0.2
 set g_balance_arc_weaponreplace ""
