--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -199,7 +199,7 @@ set g_antilag_nudge 0 "don't touch"
 set g_shootfromeye 1 "shots are fired from players' eyes/crosshairs; visual gun position can still be influenced by cl_gunalign 1 and 2"
 set g_shootfromcenter 0 "weapon gets moved to the center, shots still come from the barrel of players' weapons; visual gun position can still be influenced by cl_gunalign 1 and 2"
 set g_shootfromfixedorigin "" "if set to a string like \"0 Y Z\", the gun is moved to the given Y and Z coordinates. if set to a string like \"X Y Z\", the whole shot origin is used"
-set g_weapon_stay 0 "\"1\" = ghost weapons can be picked up but give no ammo, thrown guns have ammo, \"2\" = ghost weapons can be picked up and refill ammo to one pickup size, thrown guns have no ammo (to prevent infinite ammo abuse)"
+set g_weapon_stay 0 "\"1\" = ghost weapons can be picked up but give no ammo, thrown guns have ammo, \"2\" = ghost weapons can be picked up and refill ammo to one g_balance_weapon_pickup_ammo size, thrown guns have no ammo (to prevent infinite ammo abuse)"
 set g_weapon_throwable 1 "allow dropping weapons"
 set g_powerups -1 "\"0\" = no powerups will spawn, \"1\" = they will spawn in all game modes, \"-1\" = use game mode default"
 set g_powerups_drop 0 "allow dropping powerups; \"1\" = timer continues, \"2\" = timer freezes until picked up"
