pm: implement Q3 crouching behaviour and customisable speed
Makes sv_aircontrol_flags 4 also prevent crouching from reducing
sv_airaccelerate.
See https://gitlab.com/xonotic/xonotic-data.pk3dir/-/merge_requests/1514

Applies crouch speed limit only when attempting to exceed it, has no
effect on keyboards but is nicer for controllers, like how Q3 does it.

Also updates Q2 and Warsow crouch configs.

--- a/physicsQ3.cfg
+++ b/physicsQ3.cfg
@@ -28,7 +28,7 @@ sv_airstrafeaccelerate 1
 sv_maxairstrafespeed 0
 sv_airstrafeaccel_qw 0
 sv_aircontrol 0
-sv_aircontrol_flags 0
+sv_aircontrol_flags 4
 sv_aircontrol_penalty 0
 sv_aircontrol_power 2
 sv_airspeedlimit_nonqw 0
@@ -49,3 +49,5 @@ sv_track_canjump 1
 sv_gameplayfix_stepdown 0
 g_movement_highspeed_q3_compat 1
 sv_skimming 2
+sv_crouchjump 0
+sv_crouchspeedscale 0.25
