--- a/physicsX.cfg
+++ b/physicsX.cfg
@@ -61,3 +61,5 @@ sv_gameplayfix_stepdown 2
 sv_gameplayfix_stepdown_maxspeed 400
 g_movement_highspeed_q3_compat 0
 sv_skimming 0
+sv_crouchjump 1
+sv_crouchspeedscale 0.5
