--- a/physics.cfg
+++ b/physics.cfg
@@ -51,6 +51,8 @@ set g_physics_xonotic_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_xonotic_track_canjump 0
 set g_physics_xonotic_stepdown 2
 set g_physics_xonotic_skimming 0
+set g_physics_xonotic_crouchjump 1
+set g_physics_xonotic_crouchspeedscale 0.5
 
 // ========
 //  Nexuiz
@@ -93,6 +95,8 @@ set g_physics_nexuiz_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_nexuiz_track_canjump 0
 set g_physics_nexuiz_stepdown 0
 set g_physics_nexuiz_skimming 0
+set g_physics_nexuiz_crouchjump 1
+set g_physics_nexuiz_crouchspeedscale 0.5
 
 // =======
 //  Quake
@@ -135,6 +139,8 @@ set g_physics_quake_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_quake_track_canjump 1
 set g_physics_quake_stepdown 0
 set g_physics_quake_skimming 0
+set g_physics_quake_crouchjump 1
+set g_physics_quake_crouchspeedscale 0.5
 
 // ========
 //  Warsow
@@ -177,6 +183,8 @@ set g_physics_warsow_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_warsow_track_canjump 0
 set g_physics_warsow_stepdown 0
 set g_physics_warsow_skimming 0
+set g_physics_warsow_crouchjump 0
+set g_physics_warsow_crouchspeedscale 0.3125
 
 // ========
 //  XDF
@@ -219,6 +227,8 @@ set g_physics_xdf_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_xdf_track_canjump 0
 set g_physics_xdf_stepdown 2
 set g_physics_xdf_skimming 0
+set g_physics_xdf_crouchjump 1
+set g_physics_xdf_crouchspeedscale 0.5
 
 // =========
 //  Quake 3
@@ -237,7 +247,7 @@ set g_physics_quake3_warsowbunny_turnaccel 0
 set g_physics_quake3_airaccel_qw_stretchfactor 0
 set g_physics_quake3_airaccel_sideways_friction 0
 set g_physics_quake3_aircontrol 0
-set g_physics_quake3_aircontrol_flags 0
+set g_physics_quake3_aircontrol_flags 4
 set g_physics_quake3_aircontrol_power 2
 set g_physics_quake3_aircontrol_penalty 0
 set g_physics_quake3_warsowbunny_airforwardaccel 1.00001
@@ -261,6 +271,8 @@ set g_physics_quake3_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_quake3_track_canjump 1
 set g_physics_quake3_stepdown 0
 set g_physics_quake3_skimming 2
+set g_physics_quake3_crouchjump 0
+set g_physics_quake3_crouchspeedscale 0.25
 
 // =========
 //  CPMA
@@ -303,6 +315,8 @@ set g_physics_cpma_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_cpma_track_canjump 1
 set g_physics_cpma_stepdown 0
 set g_physics_cpma_skimming 2
+set g_physics_cpma_crouchjump 0
+set g_physics_cpma_crouchspeedscale 0.25
 
 // ========
 //  Vecxis
@@ -345,6 +359,8 @@ set g_physics_vecxis_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_vecxis_track_canjump 0
 set g_physics_vecxis_stepdown 0
 set g_physics_vecxis_skimming 0
+set g_physics_vecxis_crouchjump 1
+set g_physics_vecxis_crouchspeedscale 0.5
 
 // =========
 //  Quake 2
@@ -387,6 +403,8 @@ set g_physics_quake2_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_quake2_track_canjump 1
 set g_physics_quake2_stepdown 0
 set g_physics_quake2_skimming 0
+set g_physics_quake2_crouchjump 0
+set g_physics_quake2_crouchspeedscale 0.33333333
 
 // =======
 //  Bones (Like CPMA, but balanced for auto bhop and combat gametypes)
@@ -429,6 +447,8 @@ set g_physics_bones_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_bones_track_canjump 0
 set g_physics_bones_stepdown 2
 set g_physics_bones_skimming 1
+set g_physics_bones_crouchjump 1
+set g_physics_bones_crouchspeedscale 0.3125
 
 // ==========
 //  Overkill
@@ -471,3 +491,5 @@ set g_physics_overkill_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_overkill_track_canjump 0
 set g_physics_overkill_stepdown 2
 set g_physics_overkill_skimming 0
+set g_physics_overkill_crouchjump 1
+set g_physics_overkill_crouchspeedscale 0.5
