--- a/physicsCPMA.cfg
+++ b/physicsCPMA.cfg
@@ -71,3 +71,5 @@ sv_track_canjump 1
 sv_gameplayfix_stepdown 0
 g_movement_highspeed_q3_compat 1
 sv_skimming 2
+sv_crouchjump 0
+sv_crouchspeedscale 0.25
