--- a/physicsLeeStricklinOld.cfg
+++ b/physicsLeeStricklinOld.cfg
@@ -48,3 +48,5 @@ sv_track_canjump 0
 sv_gameplayfix_stepdown 0
 g_movement_highspeed_q3_compat 0
 sv_skimming 0
+sv_crouchjump 1
+sv_crouchspeedscale 0.5
