--- a/physicsQ2.cfg
+++ b/physicsQ2.cfg
@@ -45,3 +45,5 @@ sv_track_canjump 0
 sv_gameplayfix_stepdown 0
 g_movement_highspeed_q3_compat 0
 sv_skimming 0
+sv_crouchjump 0 // also can't crouch while not onground
+sv_crouchspeedscale 0.33333333
