--- a/physicsXDF.cfg
+++ b/physicsXDF.cfg
@@ -53,3 +53,5 @@ sv_gameplayfix_stepdown_maxspeed 400
 // needed for correct q3 haste simulation
 g_movement_highspeed_q3_compat 1
 sv_skimming 0
+sv_crouchjump 1
+sv_crouchspeedscale 0.5
