--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -78,7 +78,7 @@ set sv_friction_slick 0.5 "movement friction while on slick surfaces, if sv_fric
 set sv_slickaccelerate 0 "rate at which a player accelerates while on slick surfaces"
 
 set sv_airstopaccelerate_full 0 "how much of sv_airstopaccelerate the player receives depending on how far they're aiming backwards; \"0\" = sinusoidal from sv_airaccelerate to sv_airstopaccelerate, \"1\" = full sv_airstopaccelerate regardless of angle"
-set sv_aircontrol_flags 0 "add option numbers together to enable more than one; \"1\" = apply forward aircontrol options to backward movement, \"2\" = apply forward aircontrol options to sideward movement, \"4\" = make crouching have no impact on aircontrol"
+set sv_aircontrol_flags 0 "add option numbers together to enable more than one; \"1\" = apply forward aircontrol options to backward movement, \"2\" = apply forward aircontrol options to sideward movement, \"4\" = make crouchspeedscale have no impact on aircontrol or airaccelerate (ie apply it only on ground)"
 
 set sv_player_viewoffset "0 0 35" "view offset of the player model"
 set sv_player_mins "-16 -16 -24" "playermodel mins"
@@ -87,6 +87,8 @@ set sv_player_crouch_viewoffset "0 0 20" "view offset of the player model when c
 set sv_player_crouch_mins "-16 -16 -24" "mins of a crouched playermodel"
 set sv_player_crouch_maxs "16 16 25" "maxs of a crouched playermodel"
 
+set sv_crouchjump 1 "whether it's possible to jump while holding the crouch key"
+set sv_crouchspeedscale 0.5 "sv_maxspeed is multiplied by this value while crouching"
 set sv_doublejump 0 "\"1\" = allow Quake 2-style double jumps (requires sv_steptype 0), \"2\" = allow CPMA-style double jumps (step up, ramp, headbang, teleport)"
 set sv_jumpspeedcap_min "nan" "lower bound on the baseline velocity of a jump; final velocity will be >= (jumpheight * min + jumpheight); \"nan\" disables"
 set sv_jumpspeedcap_max "nan" "upper bound on the baseline velocity of a jump; final velocity will be <= (jumpheight * max + jumpheight); \"nan\" disables"
