menu: adjust logic and appearance for full servers
Comments out the nJoinAllowed() slot count filtering because there's
several reasons for connecting to servers where that func reported
0 free slots (see comments).

Applies the EMPTY alpha value to servers where nJoinAllowed() reported
0 free slots (not highlighted like a server reporting free slots, but
also not dimmed like one that can't be connected to).

Applies the FULL alpha value to favourite servers that can't be
connected to (if they aren't filtered out).

Removes the negative ping filter because that bug was fixed in
https://gitlab.com/xonotic/darkplaces/-/commit/fe2b222e32752c408fbe5ccf4ac3fb546f8ff41a

Makes a few clarifications.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -588,8 +588,8 @@ seta accuracy_color1 "1 1 0"
 seta accuracy_color2 "0 1 0"
 
 // for menu server list (eventually make them have engine support?)
-seta menu_slist_showfull 1 "show servers even if they are full and have no slots to join"
-seta menu_slist_showempty 1 "show servers even if they are no empty and have no opponents to play against"
+seta menu_slist_showfull 1 "show servers even if they are full so you can't connect"
+seta menu_slist_showempty 1 "show servers even if they are empty and have no opponents to play against"
 seta menu_slist_showlaggy 0 "show servers even if they are very high latency (see menu_slist_maxping)"
 seta menu_slist_modfilter "" // set to either: !modname or modname. modname of = means "same as we are running now".
 
