Standardize gametype and teammate in transifex, comments, cfgs
Changed "game type", "game mode", and "gamemode" to "gametype" in all transifex strings, comments, and config files.
Also changed "team mate" to "teammate" in the same.
This changed 16 transifex strings.
"Game mode" still occurs frequently throughout the codebase, for example common/gamemodes/.

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -29,7 +29,7 @@ seta hud_panel_powerups         1 "enable this panel"
 seta hud_panel_healtharmor      1 "enable this panel"
 seta hud_panel_notify           1 "enable this panel"
 seta hud_panel_timer            1 "enable this panel"
-seta hud_panel_radar            1 "enable this panel, \"2\" = also enable in non-teambased game modes"
+seta hud_panel_radar            1 "enable this panel, \"2\" = also enable in non-team-based gametypes"
 seta hud_panel_score            1 "enable this panel"
 seta hud_panel_racetimer        1 "enable this panel"
 seta hud_panel_checkpoints      1 "enable this panel"
