--- a/commands.cfg
+++ b/commands.cfg
@@ -55,7 +55,7 @@ alias cvar_purechanges     "qc_cmd_svcmd  cvar_purechanges     ${* ?}" // Prints
 alias editmob              "qc_cmd_svcmd  editmob              ${* ?}" // Modifies a monster or all monsters
 alias info                 "qc_cmd_svcmd  info                 ${* ?}" // Request for unique server information set up by admin
 alias ladder               "qc_cmd_svcmd  ladder               ${* ?}" // Get information about top players if supported
-alias lsmaps               "qc_cmd_svcmd  lsmaps               ${* ?}" // List maps which can be used with the current game mode
+alias lsmaps               "qc_cmd_svcmd  lsmaps               ${* ?}" // List maps which can be used with the current gametype
 alias printmaplist         "qc_cmd_svcmd  printmaplist         ${* ?}" // Display full server maplist reply
 alias rankings             "qc_cmd_svcmd  rankings             ${* ?}" // Print information about rankings
 alias records              "qc_cmd_svcmd  records              ${* ?}" // List top 10 records for the current map
@@ -192,7 +192,7 @@ alias minigame             "qc_cmd_cmd    minigame             ${* ?}" // Start 
 alias physics              "qc_cmd_cmd    physics              ${* ?}" // Change physics set
 alias ready                "qc_cmd_cmd    ready                ${* ?}" // Qualify as ready to end warmup-stage
 //alias say                "qc_cmd_cmd    say                  ${* ?}" // Send a public chat message to all players
-//alias say_team           "qc_cmd_cmd    say_team             ${* ?}" // Send a chat message to all team mates
+//alias say_team           "qc_cmd_cmd    say_team             ${* ?}" // Send a chat message to all teammates
 alias selectteam           "qc_cmd_cmd    selectteam           ${* ?}" // Attempt to choose a team to join into
 alias selfstuff            "qc_cmd_cmd    selfstuff            ${* ?}" // Stuffcmd a command to your own client
 alias sentcvar             "qc_cmd_cmd    sentcvar             ${* ?}" // New system for sending a client cvar to the server
@@ -398,7 +398,7 @@ set sv_vote_majority_factor 0.5	"what percentage of the PLAYERS constitute a maj
 set sv_vote_majority_factor_of_voted 0.5 "what percentage of the VOTERS constitute a majority too? (must be at least 0.5, recommended \"0.5\")"
 set sv_vote_gamestart 0 "allow voting during map change"
 set sv_vote_debug 0 "count votes by bots too for debugging purposes (to get a bot to vote exec this command : bot_cmd 1 cc vote yes)"
-// when disabled, don't allow game type changes "note: set these two equal to JUST support simple majorities"
+// when disabled, don't allow gametype changes "note: set these two equal to JUST support simple majorities"
 set sv_vote_override_mostrecent 0
 
 // aliases for client only
