--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -1,6 +1,6 @@
-// ===================================
-//  Master config for core game modes
-// ===================================
+// ==================================
+//  Master config for core gametypes
+// ==================================
 
 // global gametype setting (uses gametype shortname, default gametype is deathmatch)
 set gamecfg "dm"
@@ -43,7 +43,7 @@ alias sv_hook_gameend
 //  gametype vote hooks
 // =====================
 // These are called when the mode is switched via gametype vote screen,
-// earlier than gamestart hooks (useful for enabling per-game mode mutators)
+// earlier than gamestart hooks (useful for enabling per-gametype mutators)
 // The _all hook is called before the specific one
 alias sv_vote_gametype_hook_all
 alias sv_vote_gametype_hook_as
@@ -83,7 +83,7 @@ alias sv_vote_gametype_hook_surv
 // ===========
 //  leadlimit
 // ===========
-// this means that timelimit can be overidden globally and fraglimit can be overidden for each game mode: DM/TDM, Domination, CTF, and Runematch.
+// this means that timelimit can be overidden globally and fraglimit can be overidden for each gametype: DM/TDM, Domination, CTF, and Runematch.
 set leadlimit 0
 set leadlimit_and_fraglimit 0 "both leadlimit AND fraglimit must be reached"
 set timelimit_override -1	"time limit overriding the mapinfo specified one; \"0\" = play without limit, \"-1\" = use the mapinfo's limit"
@@ -297,7 +297,7 @@ set g_ctf_flagcarrier_forcefactor 1
 set g_ctf_stalemate 1 "show the enemy flagcarrier location after both teams have held the flags a certain amount of time"
 set g_ctf_stalemate_endcondition 1 "condition for stalemate mode to be finished; \"1\" = if ONE flag is no longer stale, \"2\" = if BOTH flags are no longer stale"
 set g_ctf_stalemate_time 60 "time for each flag until stalemate mode is activated"
-set g_ctf_flagcarrier_waypointforenemy_spotting 1 "show the enemy flagcarrier location if a team mate presses +use to spot them"
+set g_ctf_flagcarrier_waypointforenemy_spotting 1 "show the enemy flagcarrier location if a teammate presses +use to spot them"
 set g_ctf_dropped_capture_delay 1 "autocapture delay when flag is thrown onto the base. counted from when the flag lands on the ground"
 set g_ctf_dropped_capture_radius 100 "allow dropped flags to be automatically captured by base flags if the dropped flag is within this radius of it"
 set g_ctf_flag_damageforcescale 2
@@ -318,12 +318,12 @@ set g_ctf_throw_velocity_forward 500 "how fast or far a player can throw the fla
 set g_ctf_throw_velocity_up 200 "upwards velocity added upon initial throw"
 set g_ctf_drop_velocity_up 200 "upwards velocity when a flag is dropped (i.e. when a flag carrier dies)"
 set g_ctf_drop_velocity_side 100 "randomized sideways velocity when a flag is dropped"
-set g_ctf_pass 1 "allow passing of flags to nearby team mates"
+set g_ctf_pass 1 "allow passing of flags to nearby teammates"
 set g_ctf_pass_arc 20 "upwards arcing of the flag path to look more like a throw"
 set g_ctf_pass_arc_max 200 "maximum height for upwards arcing of the flag path to look more like a throw"
 set g_ctf_pass_directional_max 200 "maximum radius from crosshair for line of sight selection when passing"
 set g_ctf_pass_directional_min 50 "minimum radius from crosshair for line of sight selection when passing"
-set g_ctf_pass_radius 500 "maximum radius that players can pass to a team mate in"
+set g_ctf_pass_radius 500 "maximum radius that players can pass to a teammate in"
 set g_ctf_pass_wait 2 "delay in seconds between how often players can pass the flag (antispam, essentially)"
 set g_ctf_pass_request 1 "allow players to request the flag carrier to pass the flag to them"
 set g_ctf_pass_turnrate 50 "how well the flag follows the best direction to its target while passing"
@@ -431,7 +431,7 @@ set g_freezetag_weaponarena "most_available" "starting weapons. takes the same o
 // ==========
 //  keepaway
 // ==========
-set g_keepaway 0 "Keepaway: game mode which focuses around a ball" // script-ignore
+set g_keepaway 0 "Keepaway: gametype which focuses around a ball" // script-ignore
 set g_keepaway_score_bckill 1 "points for killing the ball carrier (Ball Carrier Kill)"
 set g_keepaway_score_killac 1 "points for kills while holding the ball (Kill As Carrier)"
 set g_keepaway_score_timepoints 0 "points to add to ball carrier's score per second"
@@ -615,7 +615,7 @@ set g_invasion_type 0 "type of Invasion mode; \"0\" = round-based, \"1\" = hunti
 // ======
 set g_duel 0 "Duel: frag the opponent more in a one versus one arena battle" // script-ignore
 //set g_duel_warmup 180 "have a short warmup period before beginning the actual duel"
-set g_duel_with_powerups 0 "enable powerups to spawn in the Duel game mode"
+set g_duel_with_powerups 0 "enable powerups to spawn in the Duel gametype"
 set g_duel_not_dm_maps 0 "when this is set, DM maps will NOT be listed in Duel"
 
 // ==============================
@@ -663,7 +663,7 @@ set g_tmayhem_teams_override 0 "how many teams are in TMayhem"
 // ===============
 //  team keepaway
 // ===============
-set g_tka 0 "Team Keepaway: another game mode which focuses around a ball" // script-ignore
+set g_tka 0 "Team Keepaway: another gametype which focuses around a ball" // script-ignore
 set g_tka_on_ka_maps 1 "when this is set, all KA maps automatically support TKA"
 set g_tka_on_tdm_maps 0 "when this is set, all TDM maps automatically support TKA"
 set g_tka_teams 2 "how many teams are in TKA (set by mapinfo)"
