--- a/ruleset-XDF.cfg
+++ b/ruleset-XDF.cfg
@@ -25,6 +25,6 @@ sv_vote_nospectators 1
 timelimit_override 20
 sv_maxidle_playertospectator 0
 
-// game mode settings
+// gametype settings
 g_cts_finish_kill_delay 2
 g_cts_selfdamage 0
