--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -25,7 +25,7 @@ set sv_ready_restart_after_countdown 0 "reset players and map items after the co
 
 alias sv_hook_readyrestart
 
-//nifreks lockonrestart feature, used in team-based game modes, if set to 1 and all players readied up no other player can then join the game anymore, useful to block spectators from joining
+//nifreks lockonrestart feature, used in team-based gametypes, if set to 1 and all players readied up no other player can then join the game anymore, useful to block spectators from joining
 set teamplay_lockonrestart 0 "lock teams once all players readied up and the game restarted (no new players can join after restart unless using the server-command unlockteams)"
 
 set g_maxplayers 0 "maximum number of players allowed to play at the same time; \"0\" = unlimited, \"-1\" = use the map setting or unlimited if not set (rounded to multiple of team number)"
@@ -56,7 +56,7 @@ set sv_timeout_resumetime 3 "how long the remaining timeout-time will be after a
 seta sv_autopause 1 "on a single player or listen server, this pauses while all clients have the menu, console, or chat open. on a dedicated server this pauses after starting a map if the server is empty and unpauses when the first player joins the empty server"
 
 set g_telefrags 1 "enables telefragging, i.e. killing someone who stands in the way of someone who is teleporting"
-set g_telefrags_teamplay 1 "never telefrag team mates"
+set g_telefrags_teamplay 1 "never telefrag teammates"
 set g_telefrags_avoid 1 "when teleporters have a random destination, avoid teleporting to locations where a telefrag would happen"
 set g_teleport_maxspeed 0 "maximum speed that a player can keep when going through a teleporter (if a misc_teleporter_dest also has a cap the smallest one of these will be used); \"0\" = don't limit, \"-1\" = keep no speed"
 set g_teleport_minspeed 0 "minimum speed that a player can keep when going through a teleporter which affects speed"
@@ -155,7 +155,7 @@ set bot_ai_custom_weapon_priority_mid   "vaporizer devastator oknex vortex fireb
 set bot_ai_custom_weapon_priority_close "vaporizer oknex vortex okshotgun shotgun okmachinegun machinegun arc hlac tuba seeker hagar crylink mortar electro devastator blaster fireball rifle minelayer" "desired weapons by bots for close distances ordered by priority"
 set bot_ai_weapon_combo 1 "allow bots to do weapon combos"
 set bot_ai_weapon_combo_threshold 0.4 "bots try to make a combo N seconds after the last attack"
-set bot_ai_friends_aware_pickup_radius "500" "bots will not pickup items if a team mate is this distance near the item"
+set bot_ai_friends_aware_pickup_radius "500" "bots will not pickup items if a teammate is this distance near the item"
 set bot_ai_ignoregoal_timeout 3 "ignore goals making bots to get stuck in front of a wall for X seconds"
 set bot_ai_bunnyhop_skilloffset 7 "bots with skill equal or greater than this value will perform the 'bunnyhop' technique"
 set bot_ai_bunnyhop_dir_deviation_max 20 "bots bunnyhop if speed - direction deviation is <= this amount"
@@ -201,7 +201,7 @@ set g_shootfromcenter 0 "weapon gets moved to the center, shots still come from 
 set g_shootfromfixedorigin "" "if set to a string like \"0 Y Z\", the gun is moved to the given Y and Z coordinates. if set to a string like \"X Y Z\", the whole shot origin is used"
 set g_weapon_stay 0 "\"1\" = ghost weapons can be picked up but give no ammo, thrown guns have ammo, \"2\" = ghost weapons can be picked up and refill ammo to one g_balance_weapon_pickup_ammo size, thrown guns have no ammo (to prevent infinite ammo abuse)"
 set g_weapon_throwable 1 "allow dropping weapons"
-set g_powerups -1 "\"0\" = no powerups will spawn, \"1\" = they will spawn in all game modes, \"-1\" = use game mode default"
+set g_powerups -1 "\"0\" = no powerups will spawn, \"1\" = they will spawn in all gametypes, \"-1\" = use gametype default"
 set g_powerups_drop 0 "allow dropping powerups; \"1\" = timer continues, \"2\" = timer freezes until picked up"
 set g_powerups_drop_ondeath 1 "players will drop their powerups on death; \"1\" = timer continues, \"2\" = timer freezes until picked up"
 set g_powerups_stack 0 "enables stacking of powerup timers when a player picks up a powerup they already have; otherwise timer is reset to the time granted by the item, if greater than the time they currently have"
@@ -263,7 +263,7 @@ set g_respawn_delay_small_count 0 "player count per team for g_respawn_delay_sma
 set g_respawn_delay_large 2 "large game number of seconds players have to wait before they can respawn again"
 set g_respawn_delay_large_count 8 "player count per team for g_respawn_delay_large. values <= 0 mean the minimum amount of players to have gameplay (typically 2 in FFA, 1 in teamplay)"
 set g_respawn_delay_max 5 "number of seconds players can wait before they're forced to respawn (REQUIRES: g_forced_respawn 1 to be effective)"
-set g_respawn_delay_forced 0 "enforce regular respawn delay (prevent game mode specific respawn delays)"
+set g_respawn_delay_forced 0 "enforce regular respawn delay (prevent gametype specific respawn delays)"
 set g_respawn_waves 0 "respawn in waves (every X seconds), intended to decrease overwhelming base attacks"
 
 // overtime
@@ -376,7 +376,7 @@ set g_maplist_votable_screenshot_dir "maps levelshots"	"where to look for map sc
 set sv_vote_gametype 0 "show a vote screen for gametypes before map vote screen"
 set sv_vote_gametype_reduce_time 10 "reduce the number of options shown after this amount of time, during gametype vote screen; \"0\" = disable this feature"
 set sv_vote_gametype_reduce_count 2 "number of options shown after being reduced, during gametype vote screen; if < 2, keep all gametypes that received any votes, if at least 2 did"
-set sv_vote_gametype_options "dm tdm ca ctf" "identifiers of game modes on the voting screen, can be custom (max 9 chars). see example in server/server.cfg"
+set sv_vote_gametype_options "dm tdm ca ctf" "identifiers of gametypes on the voting screen, can be custom (max 9 chars). see example in server/server.cfg"
 set sv_vote_gametype_timeout 20 "how long the gametype vote screen lasts"
 set sv_vote_gametype_detail 1 "\"0\" = hide per-gametype vote counts (to avoid influential first votes), \"1\" = show the counts, \"2\" = also show which gametype will win in the event of a tie"
 set sv_vote_gametype_default_current 1 "keep the current gametype if no one votes"
@@ -489,7 +489,7 @@ set sv_weaponstats_file "" "when set to a file name, per-weapon stats get writte
 
 set rescan_pending 0 "set to \"1\" to schedule a fs_rescan at the end of this match"
 
-set g_mapinfo_allow_unsupported_modes_and_let_stuff_break "0" "allow forcing game modes using g_ cvars even if the map does not support them"
+set g_mapinfo_allow_unsupported_modes_and_let_stuff_break "0" "allow forcing gametypes using g_ cvars even if the map does not support them"
 set g_mutatormsg "" "mutator message"
 
 set spawn_debug 0 "use all spawns one by one, then abort, to verify all spawnpoints"
