cl_physics: add stepdown and fix existing stepdown configs
sv_gameplayfix_stepdown_maxspeed 0 only disables the speed limit so
several configs had stepdowns enabled for any speed but shouldn't have
stepdowns at all. Updated the description to reflect this.

--- a/physics.cfg
+++ b/physics.cfg
@@ -41,6 +41,7 @@ set g_physics_xonotic_airstopaccelerate 3
 set g_physics_xonotic_airstopaccelerate_full 0
 set g_physics_xonotic_slickaccelerate 15
 set g_physics_xonotic_track_canjump 0
+set g_physics_xonotic_stepdown 2
 
 // ========
 //  Nexuiz
@@ -73,6 +74,7 @@ set g_physics_nexuiz_airstopaccelerate 0
 set g_physics_nexuiz_airstopaccelerate_full 0
 set g_physics_nexuiz_slickaccelerate 8
 set g_physics_nexuiz_track_canjump 0
+set g_physics_nexuiz_stepdown 0
 
 // =======
 //  Quake
@@ -105,6 +107,7 @@ set g_physics_quake_airstopaccelerate 0
 set g_physics_quake_airstopaccelerate_full 0
 set g_physics_quake_slickaccelerate 10
 set g_physics_quake_track_canjump 1
+set g_physics_quake_stepdown 0
 
 // ========
 //  Warsow
@@ -137,6 +140,7 @@ set g_physics_warsow_airstopaccelerate 2.5
 set g_physics_warsow_airstopaccelerate_full 0
 set g_physics_warsow_slickaccelerate 15
 set g_physics_warsow_track_canjump 0
+set g_physics_warsow_stepdown 0
 
 // ========
 //  XDF
@@ -169,6 +173,7 @@ set g_physics_xdf_airstopaccelerate 2.5
 set g_physics_xdf_airstopaccelerate_full 0
 set g_physics_xdf_slickaccelerate 15
 set g_physics_xdf_track_canjump 0
+set g_physics_xdf_stepdown 2
 
 // =========
 //  Quake 3
@@ -201,6 +206,7 @@ set g_physics_quake3_airstopaccelerate 0
 set g_physics_quake3_airstopaccelerate_full 0
 set g_physics_quake3_slickaccelerate 1
 set g_physics_quake3_track_canjump 1
+set g_physics_quake3_stepdown 0
 
 // =========
 //  CPMA
@@ -233,6 +239,7 @@ set g_physics_cpma_airstopaccelerate 2.5
 set g_physics_cpma_airstopaccelerate_full 1
 set g_physics_cpma_slickaccelerate 15
 set g_physics_cpma_track_canjump 1
+set g_physics_cpma_stepdown 0
 
 // ========
 //  Vecxis
@@ -265,6 +272,7 @@ set g_physics_vecxis_airstopaccelerate 0
 set g_physics_vecxis_airstopaccelerate_full 0
 set g_physics_vecxis_slickaccelerate 5.5
 set g_physics_vecxis_track_canjump 0
+set g_physics_vecxis_stepdown 0
 
 // =========
 //  Quake 2
@@ -297,6 +305,7 @@ set g_physics_quake2_airstopaccelerate 0
 set g_physics_quake2_airstopaccelerate_full 0
 set g_physics_quake2_slickaccelerate 10
 set g_physics_quake2_track_canjump 1
+set g_physics_quake2_stepdown 0
 
 // =======
 //  Bones
@@ -329,6 +338,7 @@ set g_physics_bones_airstopaccelerate 2.5
 set g_physics_bones_airstopaccelerate_full 1
 set g_physics_bones_slickaccelerate 15
 set g_physics_bones_track_canjump 0
+set g_physics_bones_stepdown 2
 
 // ==========
 //  Overkill
@@ -361,3 +371,4 @@ set g_physics_overkill_airstopaccelerate 3
 set g_physics_overkill_airstopaccelerate_full 0
 set g_physics_overkill_slickaccelerate 15
 set g_physics_overkill_track_canjump 0
+set g_physics_overkill_stepdown 2
