--- a/physicsNoQWBunny-nexbased.cfg
+++ b/physicsNoQWBunny-nexbased.cfg
@@ -49,5 +49,5 @@ sv_jumpspeedcap_max_disable_on_ramps 1
 g_teleport_maxspeed 0
 g_teleport_minspeed 0
 sv_track_canjump 0
-sv_gameplayfix_stepdown_maxspeed 0
+sv_gameplayfix_stepdown 0
 g_movement_highspeed_q3_compat 0
