--- a/physicsQ3.cfg
+++ b/physicsQ3.cfg
@@ -45,5 +45,5 @@ sv_jumpspeedcap_max_disable_on_ramps 0
 g_teleport_maxspeed 400
 g_teleport_minspeed 400
 sv_track_canjump 1
-sv_gameplayfix_stepdown_maxspeed 0
+sv_gameplayfix_stepdown 0
 g_movement_highspeed_q3_compat 1
