--- a/physicsXDF.cfg
+++ b/physicsXDF.cfg
@@ -47,6 +47,7 @@ sv_jumpspeedcap_max_disable_on_ramps 1
 g_teleport_maxspeed 600
 g_teleport_minspeed 0
 sv_track_canjump 0
+sv_gameplayfix_stepdown 2
 sv_gameplayfix_stepdown_maxspeed 400
 // needed for correct q3 haste simulation
 g_movement_highspeed_q3_compat 1
