--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -556,9 +556,8 @@ alias pm_gw "prvm_globalwatchpoint menu ${* ?}"
 sv_gameplayfix_delayprojectiles 0
 sv_gameplayfix_q2airaccelerate 1
 sv_gameplayfix_stepmultipletimes 1
-sv_gameplayfix_stepdown 2
 // only available in qc physics
-set sv_gameplayfix_stepdown_maxspeed 0 "maximum speed walking entities can be moving for stepping down to apply"
+set sv_gameplayfix_stepdown_maxspeed 400 "maximum speed walking entities can be moving for stepping down to apply, \"0\" is unlimited speed"
 
 // this feature is currently buggy in the engine (it appears to PREVENT any dropping in lots of maps, leading to weirdly aligned entities, and in some cases even CAUSES them to drop through solid, like in facing worlds nex)
 // the bugs should be fixed in https://gitlab.com/xonotic/darkplaces/-/merge_requests/144 but we don't need this, didn't enable it in the past, and it's not implemented in DropToFloor_QC().
