Apply balance vote 30: Switch weapons faster to/from the blaster
See https://xonotic.org/balancevotes/30/

--- a/testing.cfg
+++ b/testing.cfg
@@ -1,7 +1,3 @@
-// https://forums.xonotic.org/showthread.php?tid=8190
-// https://gitlab.com/xonotic/xonotic-data.pk3dir/merge_requests/738
-alias test_blaster_switch "settemp g_balance_blaster_primary_animtime 0.1 ; settemp g_balance_blaster_switchdelay_drop 0.1 ; settemp g_balance_blaster_switchdelay_raise 0.1"
-
 alias test_crylink_sec_horizontal "settemp g_balance_crylink_secondary_linkexplode 0 ; settemp g_balance_crylink_secondary_other_fadetime 2 ; settemp g_balance_crylink_secondary_other_lifetime 2 ; settemp g_balance_crylink_secondary_speed 4000 ; settemp g_balance_crylink_secondary_spread 0.08 ; settemp g_balance_crylink_secondary_spreadtype 0"
 
 alias test_rocket_flying "settemp g_balance_devastator_remote_jump 1"
@@ -17,7 +13,7 @@ alias test_ctf_stalemate120 "settemp g_ctf_stalemate_time 120"
 // https://gitlab.com/xonotic/xonotic-data.pk3dir/-/merge_requests/1067
 alias test_electro_combo_over_time "settemp g_balance_electro_combo_duration 1.5"
 
-alias _testing_list "$1 test_blaster_switch ; $1 test_crylink_sec_horizontal ; $1 test_rocket_flying ; $1 test_ctf_stalemate90 ; $1 test_ctf_stalemate120 ; $1 test_arc_bounce ; $1 test_arc_bounce_burst ; $1 test_electro_combo_over_time"
+alias _testing_list "$1 test_crylink_sec_horizontal ; $1 test_rocket_flying ; $1 test_ctf_stalemate90 ; $1 test_ctf_stalemate120 ; $1 test_arc_bounce ; $1 test_arc_bounce_burst ; $1 test_electro_combo_over_time"
 
 // defer addvote and delvote execution because program commands can't be executed if testing_disable
 // and testing_enable are executed at startup (no program is loaded yet)
