buffs: Rework Magnet buff
Changes:
- Made it work through warpzones.
- Made it collect items in a sphere, rather than a rectangular prism.
- Reduced collection radius from 250 to 150.
    - The effective radius was actually reduced by more than this, since the previous calculation added player .mins & .maxs (hitbox size), and it no longer does that (warpzone implementation limitation, and it's more logical to not account for it).
- Made it collect the item only if there's line of sight (determined by player's origin + view_ofs, to the item's origin).
- Made it not impact buff pickups, so you never accidentally pick up a buff while holding Magnet buff.
    - Removed g_buffs_magnet_range_buff, and renamed g_buffs_magnet_range_item to g_buffs_magnet_range.
These changes affected balance but didn't update the gametest hash.
Also updated the guide description.

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -403,8 +403,7 @@ set g_buffs_swapper_time 60 "swapper buff carry time"
 set g_buffs_swapper_range 1500 "maximum range of swapping with enemy"
 set g_buffs_magnet 1 "Magnet buff: greatly increased item pickup range" // script-ignore
 set g_buffs_magnet_time 60 "magnet buff carry time"
-set g_buffs_magnet_range_item 250 "range around player that items are automatically picked up (excludes other buffs)"
-set g_buffs_magnet_range_buff 100 "range around player that only buffs are picked up (drops magnet buff)"
+set g_buffs_magnet_range 150 "range around player in which items are automatically picked up if there's line of sight (NOTE: excludes other buffs)"
 set g_buffs_luck 1 "Luck buff: randomly increased damage" // script-ignore
 set g_buffs_luck_time 60 "luck buff carry time"
 set g_buffs_luck_chance 0.15 "chance for 'critical' hit (multiplied damage) with luck buff"
