scores: Implement g_teamkill_punishing
When enabled, the cvar subtracts more points the more teamkills a player does.
Extra points subtracted is (teamkills * (teamkills - 1)) * 0.5.
- So if a teamkill is worth -1, code would subtract 1 point, then 2, 4, 7, 11, 16, 22, etc.
Disabled by default as this impacts balance so will require a vote.

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -283,6 +283,8 @@ set g_friendlyfire_virtual_force 1  "for teamplay_mode 4. apply force even thoug
 set g_teamdamage_threshold 40       "for teamplay_mode 4. threshold over which to apply mirror damage"
 set g_teamdamage_resetspeed 20      "for teamplay_mode 4. how fast player's teamdamage count decreases"
 
+set g_teamkill_punishing 0 "subtract more points the more teamkills a player has (1, then 2, 4, 7, 11, 16, 22, etc.)"
+
 set g_balance_teams 1 "automatically balance out players entering instead of asking them for their preferred team"
 set g_balance_teams_prevent_imbalance 1 "prevent players from changing to larger teams during the match"
 set g_balance_teams_queue 0 "queue players to maintain balance when they join during the match, any bots should be added with minplayers_per_team instead of bot_number so humans can replace them instead of waiting in queue while a bot plays"
