nades: Add missing cvars
Added g_nades_ice_radius, g_nades_heal_radius, g_nades_ammo_radius, and g_nades_darkness_radius, to allow configuring the effective radius of these cvars specifically.

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -267,6 +267,7 @@ set g_nades_ice 1 "Ice nade: freezes and reduces health; \"1\" = allow client se
 set g_nades_ice_freeze_time 3 "how long the ice field will last"
 set g_nades_ice_explode     0 "whether the ice nade should explode again once the ice field dissipated"
 set g_nades_ice_teamcheck   2 "\"0\" = freezes everyone including the player who threw the nade, \"1\" = freezes enemies and teammates, \"2\" = freezes only enemies"
+set g_nades_ice_radius 300 "distance from the ice nade within which players are frozen"
 
 // Translocate (4)
 set g_nades_translocate 1 "Translocate nade: teleports into explosion nade location; \"1\" = allow client selection of this nade type" // script-ignore
@@ -284,6 +285,7 @@ set g_nades_heal_time 10 "how long the healing field will last"
 set g_nades_heal_rate 15 "health given per second"
 set g_nades_heal_friend 1 "multiplier of health given to teammates"
 set g_nades_heal_foe   -4 "multiplier of health given to enemies"
+set g_nades_heal_radius 300 "distance from the heal orb"
 
 // Pokenade (7)
 set g_nades_pokenade 0 "Pokenade: spawns a monster into the explosion nade location; \"1\" = allow client selection of this nade type" // script-ignore
@@ -309,12 +311,14 @@ set g_nades_ammo_rate 30 "ammo given per second"
 set g_nades_ammo_friend 1 "multiplier of ammo given to teammates"
 set g_nades_ammo_foe   -2 "multiplier of ammo given to enemies"
 set g_nades_ammo_clip_empty_rate 0 "fraction of the enemies' total weapon clip removed per second when holding a reloadable weapon inside the orb"
+set g_nades_ammo_radius 300 "distance from the ammo orb"
 
 // Darkness (11)
 set g_nades_darkness 0 "Darkness nade: blinds enemies; \"1\" = allow client selection of this nade type" // script-ignore
 set g_nades_darkness_time 4 "how long the dark field will last"
 set g_nades_darkness_explode 0 "whether the darkness nade should explode again once the dark field dissipated"
 set g_nades_darkness_teamcheck 2 "\"0\" = blinds everyone including the player who threw the nade, \"1\" = blinds enemies and teammates, \"2\" = blinds only enemies"
+set g_nades_darkness_radius 300 "distance from the darkness nade within which players are blinded"
 
 // ============
 //  camp check
