nades: Add a g_nades_heal_armor_rate cvar
Allows the heal nade to give armor as well as health, if wanted.
Defaults to 0.

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -283,6 +283,7 @@ set g_nades_spawn_destroy_damage 25 "damage caused when spawn nades are destroye
 set g_nades_heal 1 "Heal nade: spawns an orb within which players and their teammates recover health and enemies lose health; \"1\" = allow client selection of this nade type" // script-ignore
 set g_nades_heal_time 10 "lifetime of heal nade healing fields"
 set g_nades_heal_rate 15 "heal nade health given per second"
+set g_nades_heal_armor_rate 0 "heal nade armor given per second, only applies to self and teammates"
 set g_nades_heal_friend 1 "heal nade multiplier of health given to teammates"
 set g_nades_heal_foe   -4 "heal nade multiplier of health given to enemies"
 set g_nades_heal_radius 300 "heal nade orb radius"
