--- a/notifications.cfg
+++ b/notifications.cfg
@@ -137,6 +137,7 @@ seta notification_INFO_DEATH_MURDER_FIRE "1" "\"0\" = off, \"1\" = print to cons
 seta notification_INFO_DEATH_MURDER_LAVA "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_MONSTER "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_NADE "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_DEATH_MURDER_NADE_DARKNESS "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_NADE_HEAL "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_NADE_ICE "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_NADE_NAPALM "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
@@ -178,6 +179,7 @@ seta notification_INFO_DEATH_SELF_MON_WYVERN "1" "\"0\" = off, \"1\" = print to 
 seta notification_INFO_DEATH_SELF_MON_ZOMBIE_JUMP "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_MON_ZOMBIE_MELEE "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_NADE "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_DEATH_SELF_NADE_DARKNESS "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_NADE_HEAL "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_NADE_ICE "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_NADE_NAPALM "1" "\"0\" = off, \"1\" = print to console, \"2\" = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
@@ -593,6 +595,7 @@ seta notification_DEATH_MURDER_FIRE "1" "enable this multiple notification"
 seta notification_DEATH_MURDER_LAVA "1" "enable this multiple notification"
 seta notification_DEATH_MURDER_MONSTER "1" "enable this multiple notification"
 seta notification_DEATH_MURDER_NADE "1" "enable this multiple notification"
+seta notification_DEATH_MURDER_NADE_DARKNESS "1" "enable this multiple notification"
 seta notification_DEATH_MURDER_NADE_HEAL "1" "enable this multiple notification"
 seta notification_DEATH_MURDER_NADE_ICE "1" "enable this multiple notification"
 seta notification_DEATH_MURDER_NADE_NAPALM "1" "enable this multiple notification"
@@ -634,6 +637,7 @@ seta notification_DEATH_SELF_MON_WYVERN "1" "enable this multiple notification"
 seta notification_DEATH_SELF_MON_ZOMBIE_JUMP "1" "enable this multiple notification"
 seta notification_DEATH_SELF_MON_ZOMBIE_MELEE "1" "enable this multiple notification"
 seta notification_DEATH_SELF_NADE "1" "enable this multiple notification"
+seta notification_DEATH_SELF_NADE_DARKNESS "1" "enable this multiple notification"
 seta notification_DEATH_SELF_NADE_HEAL "1" "enable this multiple notification"
 seta notification_DEATH_SELF_NADE_ICE "1" "enable this multiple notification"
 seta notification_DEATH_SELF_NADE_NAPALM "1" "enable this multiple notification"
