nades: Allow ammo nade to empty enemy weapon clip
Added cvar g_nades_ammo_clip_empty_rate.
Enemies lose this fraction of the clip of their currently held weapon (if it's reloadable) every second while in an enemy ammo nade orb.
Also improved unclear variable names in entrap and veil nade files.
Also got rid of the unused .nade_ammo_time field.

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -306,6 +306,7 @@ set g_nades_ammo_time 4 "life time of the orb"
 set g_nades_ammo_rate 30 "ammo given per second"
 set g_nades_ammo_friend 1 "multiplier of ammo given to team mates"
 set g_nades_ammo_foe   -2 "multiplier of ammo given to enemies"
+set g_nades_ammo_clip_empty_rate 0 "fraction of the enemies' total weapon clip removed per second when holding a reloadable weapon inside the orb"
 
 // Darkness (11)
 set g_nades_darkness 0 "Darkness nade: blinds enemies; \"1\" = allow client selection of this nade type" // script-ignore
