cvars: Improve attack time multiplier cvar names
Setting g_balance_powerup_speed_attackrate 2 makes the holder shoot 2x slower, despite the cvar name being "attack rate", not "attack time".
Improved the name of this cvar, and g_buffs_disability_rate which had the same issue.

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -374,7 +374,7 @@ set g_buffs_disability 0 "Disability buff: attacks to players and monsters deal 
 set g_buffs_disability_time 60 "disability buff carry time"
 set g_buffs_disability_slowtime 3 "time in seconds for target disability"
 set g_buffs_disability_speed 0.7 "player speed multiplier while disabled"
-set g_buffs_disability_rate 1.5 "player weapon rate multiplier while disabled"
+set g_buffs_disability_attack_time_multiplier 1.5 "player weapon fire time multiplier while disabled"
 set g_buffs_disability_weaponspeed 0.7 "weapon speed multiplier while disabled"
 set g_buffs_vampire 1 "Vampire buff: attacks to players and monsters heal the carrier" // script-ignore
 set g_buffs_vampire_time 60 "vampire buff carry time"
