--- a/bal-wep-xonotic.cfg
+++ b/bal-wep-xonotic.cfg
@@ -108,6 +108,7 @@ set g_balance_machinegun_reload_ammo 0
 set g_balance_machinegun_reload_time 2
 set g_balance_machinegun_solidpenetration 13.1
 set g_balance_machinegun_spread_add 0.012
+set g_balance_machinegun_spread_crouchmod 1
 set g_balance_machinegun_spread_decay 0.048
 set g_balance_machinegun_spread_max 0.05
 set g_balance_machinegun_spread_min 0.02
