Use Gaussian (2D) spread for all random spread weapons
See https://xonotic.org/balancevotes/31.

Kept the old behavior in balance-nexuiz25.cfg.

--- a/balance-nexuiz25.cfg
+++ b/balance-nexuiz25.cfg
@@ -111,6 +111,7 @@ set g_projectiles_newton_style 2
 set g_projectiles_newton_style_2_minfactor 0.7
 set g_projectiles_newton_style_2_maxfactor 5
 set g_projectiles_spread_style 0
+set g_hitscan_spread_style 0
 set g_balance_falldamage_deadminspeed 150
 set g_balance_falldamage_minspeed 1400
 set g_balance_falldamage_factor 0.15
