Add checkpoint outline visualization for race/CTS

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -736,6 +736,10 @@ seta cl_race_cptimes_showspeed 0 "show race checkpoint speed (NOTE: ignores vert
 seta cl_race_cptimes_showspeed_unit 1 "show race checkpoint speed units"
 seta cl_race_cptimes_namesize 10 "maximum length of player names in race checkpoint messages"
 seta cl_race_checkpoint_splits_console 1 "print race checkpoint splits to console"
+seta cl_race_checkpoint_outline 0 "enable checkpoint outlines"
+seta cl_race_checkpoint_outline_fill 0 "checkpoint outline fill strength"
+seta cl_race_checkpoint_outline_width 1 "checkpoint outline width"
+seta cl_race_checkpoint_outline_color "1 1 0" "checkpoint outline color"
 
 seta cl_autoswitch_cts -1 "\"-1\" = fallback to the behavior of cl_autoswitch, \"0\" = never autoswitch in CTS, \"1\" = always autoswitch in CTS (regardless of weapon priority)"
 
