--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -937,7 +937,7 @@ exec hud_luma.cfg
 // other config files
 exec effects-normal.cfg
 exec crosshairs.cfg
-exec gamemodes-client.cfg
+exec gametypes-client.cfg
 
 seta cl_physics "default" "client selected physics set"
 
